# udemy-mnist-app

js-training/: index.html  main.js
python-web-app/: index.html  main.py  model.onnx  pyproject.toml
python-web-app/static/: main.js  style.css
static-site/: index.html
static-site/static/: main.js
train/: predict.py  pyproject.toml  show_data.py  train.py
