[tool.poetry]
name = "python-web-app"
version = "0.1.0"
description = ""
authors = ["keiki-saito <keicake0808@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.13"
fastapi = "0.81.0"
uvicorn = "0.18.3"
python-multipart = "0.0.5"
pillow = "9.2.0"
onnxruntime = "1.16.2"
numpy = "1.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
